--- a/actions/Dockerfile
+++ b/actions/Dockerfile
@@ -2,7 +2,7 @@
 FROM rust:1.91.1 AS builder
 WORKDIR /usr/src/app
 
-ARG BETA_NAME
+ARG ACTION_NAME
 
 # Add the MUSL target
 RUN rustup target add x86_64-unknown-linux-musl
@@ -11,9 +11,9 @@ RUN rustup target add x86_64-unknown-linux-musl
 COPY . .
 
 # Build the specific package
-RUN if [ -z "$BETA_NAME" ]; then echo "Error: BETA_NAME build-arg is not set" && exit 1; fi; \
-    cargo build --target x86_64-unknown-linux-musl --release --package ${BETA_NAME}
+RUN if [ -z "$ACTION_NAME" ]; then echo "Error: ACTION_NAME build-arg is not set" && exit 1; fi; \
+    cargo build --target x86_64-unknown-linux-musl --release --package ${ACTION_NAME}
 
 FROM scratch
-COPY --from=builder /usr/src/app/target/x86_64-unknown-linux-musl/release/${BETA_NAME} /${BETA_NAME}
-ENTRYPOINT ["/${BETA_NAME}"]
+COPY --from=builder /usr/src/app/target/x86_64-unknown-linux-musl/release/${ACTION_NAME} /${ACTION_NAME}
+ENTRYPOINT ["/${ACTION_NAME}"]
