--- a/actions/Dockerfile
+++ b/actions/Dockerfile
@@ -1,19 +1,17 @@
 ARG ACTION_NAME
 
-# Stage 1: Builder
 FROM rust:1.91.1 AS builder
+ARG ACTION_NAME
 WORKDIR /usr/src/app
 
-# Add the MUSL target
 RUN rustup target add x86_64-unknown-linux-musl
 
-# Copy the entire workspace
 COPY . .
 
-# Build the specific package
 RUN if [ -z "$ACTION_NAME" ]; then echo "Error: ACTION_NAME build-arg is not set" && exit 1; fi; \
     cargo build --target x86_64-unknown-linux-musl --release --package ${ACTION_NAME}
 
 FROM scratch
+ARG ACTION_NAME
 COPY --from=builder /usr/src/app/target/x86_64-unknown-linux-musl/release/${ACTION_NAME} /${ACTION_NAME}
 ENTRYPOINT ["/${ACTION_NAME}"]
