--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -1,28 +1,27 @@
 name: Build Docker Images
-
 on:
   push:
     branches: ["main"]
     tags: ["v*.*.*"]
   pull_request:
     branches: ["main"]
-
 jobs:
   build-and-push-images:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     strategy:
       fail-fast: false
       matrix:
         action:
           - { action: "post-comment", image: "post-comment" }
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -39,17 +38,24 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/cruxy-eu/beta
+          images: ghcr.io/${{ github.repository_owner }}/beta-${{ matrix.action.image }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./actions/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=${{ matrix.action.action }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.action.action }}
           build-args: |
             ACTION_NAME=${{ matrix.action.action }}
