--- a/actions/Dockerfile
+++ b/actions/Dockerfile
@@ -1,15 +1,11 @@
 ARG ACTION_NAME
-
 FROM rust:1.91.1 AS builder
 ARG ACTION_NAME
 WORKDIR /usr/src/app
 RUN apt-get update && apt-get install -y musl-tools build-essential
 RUN rustup target add x86_64-unknown-linux-musl
-
 COPY . .
-
-RUN if [ -z "$ACTION_NAME" ]; then echo "Error: ACTION_NAME build-arg is not set" && exit 1; fi; \
-    cargo build --target x86_64-unknown-linux-musl --release --package ${ACTION_NAME}
+RUN cargo build --target x86_64-unknown-linux-musl --release --package ${ACTION_NAME}
 
 FROM scratch
 ARG ACTION_NAME
