--- a/actions/Dockerfile
+++ b/actions/Dockerfile
@@ -1,5 +1,5 @@
 ARG ACTION_NAME
-FROM rust:1.91.1 AS builder
+FROM --platform=linux/amd64 rust:1.91.1 AS builder
 ARG ACTION_NAME
 WORKDIR /usr/src/app
 RUN apt-get update && apt-get install -y musl-tools build-essential
@@ -7,7 +7,7 @@ RUN rustup target add x86_64-unknown-linux-musl
 COPY . .
 RUN cargo build --target x86_64-unknown-linux-musl --release --package ${ACTION_NAME}
 
-FROM scratch
+FROM --platform=linux/amd64 scratch
 ARG ACTION_NAME
 COPY --from=builder /usr/src/app/target/x86_64-unknown-linux-musl/release/${ACTION_NAME} /${ACTION_NAME}
 ENTRYPOINT ["/${ACTION_NAME}"]
