ci: remove branch from sha

--- a/actions/post-comment/action.yml
+++ b/actions/post-comment/action.yml
@@ -9,7 +9,7 @@ inputs:
   number:
     description: "The pull request number"
     required: true
-  comment-body:
+  body:
     description: "The text of the comment (supports markdown)"
     required: true
 
